@@ -1,4 +1,4 @@
-$Id: README 38475 2015-09-27 14:11:56Z peter $
+$Id: README 38510 2015-10-01 06:50:49Z peter $
 Public domain.  Originally created by Karl Berry, 2005.
 
 Libraries we compile for TeX Live.
@@ -24,7 +24,7 @@ gmp 6.0.0 - checked 25mar14
 graphite2 1.3.3 - checked 27sep15
   http://sourceforge.net/projects/silgraphite/files/graphite2/
 
-harfbuzz 1.0.3 - checked 2sep15
+harfbuzz 1.0.4 - checked 1oct15
   http://www.freedesktop.org/software/harfbuzz/release/
 
 icu 56.1 (rc) - checked 27sep15
